<resources>
    <string name="app_name">woopevents</string>
    <string name="lbl_checkin">Check-In</string>
    <string name="lbl_how_to_get">Como chegar</string>
    <string name="lbl_date">Data:</string>
    <string name="lbl_price">Preço:</string>
    <string name="lbl_enter_name_and_email">Informe seu nome e e-mail:</string>
    <string name="lbl_name">Nome</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_save">Salvar</string>
    <string name="label_empty_error_message">O texto não pode ser vazio.</string>
    <string name="message_enter_valid_info">Digite um dado válido</string>
    <string name="message_checkin">Checkin realizado com sucesso!</string>
    <string name="message_error">Ops! Algo deu errado.</string>
    <string name="lbl_title_message">Atenção</string>
    <string name="lbl_event_detail">Detalhe do Evento</string>
    <string name="lbl_event_list">Lista de Eventos</string>
</resources>