<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="Title Event"
                style="@style/font_bold_colorblack_26sp" />

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_date"
                style="@style/font_bold_colorblack_18sp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                app:layout_constraintLeft_toRightOf="@+id/lblDate"
                android:layout_marginTop="10dp"
                tools:text="25/12/2021"
                style="@style/font_bold_colorblack_18sp" />

            <TextView
                android:id="@+id/lblPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lblDate"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_price"
                style="@style/font_bold_colorblack_18sp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lblDate"
                app:layout_constraintLeft_toRightOf="@+id/lblPrice"
                android:layout_marginTop="10dp"
                tools:text="R$ 50,00"
                style="@style/font_bold_colorblack_18sp" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtPrice"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="24dp"
                tools:text="Description" />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/imvPicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_how_to_get"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                app:layout_constraintLeft_toRightOf="@+id/txtDate"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtDescription"
                app:drawableTopCompat="@drawable/ic_location"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/lblNameAndEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cardImage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="36dp"
                android:text="@string/lbl_enter_name_and_email"
                style="@style/font_bold_colorblack_18sp"
                />
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lblNameAndEmail"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/lbl_name" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edtName"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"/>
            <Button
                android:id="@+id/btnCheckin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="12dp"
                android:text="@string/lbl_checkin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/pbItemEvent"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>